# gemini-ai-code-reviewer

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TESTING_VUE.md  Test.vue  action.yml  coding_guidelines.md  db-script.js  dummy-dbscript.js  embeddings_store.py  openai-code-review-workflow.yml  pyproject.toml  requirements.txt  review_code.py  review_code_claude.py  review_code_gemini.py  review_code_openai.py  test_deepseek.py  test_empty_response_fix.py  test_event_logic.py  test_json_parsing_fix.py  test_openai_integration.py  test_prompt_improvements.py  test_pull_request_event.py  test_review_fix.py  test_review_logic.py  test_vue_review.py
.github/: FUNDING.yml  README.md
.github/workflows/: code-review.yml  code-reviewer-action.yml  deepseek-review-action.yml  publish.yml
ai_providers/: __init__.py  deepseek_provider.py  factory.py  gemini_provider.py
docs/: change_logs.md
gemini_reviewer/: README.md  __init__.py  code_reviewer.py  config.py  diff_parser.py  gemini_client.py  github_client.py  models.py
src/: requirements.txt  review_code_gemini.py
src/components/: TodoList.vue
src/gemini_ai_code_reviewer/: _review_code_gemini_github.py  _review_code_gemini_gitlab.py  review_code_gemini.py
src/gemini_ai_code_reviewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gemini_ai_code_reviewer/models/: pr_detail.py
src/gemini_ai_code_reviewer/utils/: gemini_analyze.py  git_helper.py
