[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-ai-code-reviewer"
version = "0.0.1"
description = "A cross-platform code review tool using Gemini AI for GitHub, GitLab, and Azure DevOps."
authors = [
    { name = "Hoang Nguyen", email = "hoanghuynguyen0403@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "google-generativeai",
    "PyGithub",
    "unidiff",
    "google-ai-generativelanguage==0.6.10",
    "github3.py==1.3.0",
    "requests"
]

[project.urls]
Homepage = "https://github.com/HoangNguyen0403"
Repository = "https://github.com/HoangNguyen0403/gemini-ai-code-reviewer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"gemini_ai_code_reviewer" = ["*.json", "*.md"]